<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    tools:context="com.exampleholamundo.esdraslopez.cuotas_banco.MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginBottom="74dp"
        android:layout_above="@+id/layout2"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/textInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textInforma"
            android:textAlignment="center"
            android:textSize="22dp"
            android:textStyle="italic"
            android:typeface="normal" />


        <TextView
            android:id="@+id/textMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:layout_marginTop="45dp"
            android:textStyle="italic"
            android:textSize="20dp"
            android:textAlignment="center"
            android:typeface="normal"/>

        <EditText
            android:id="@+id/editMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="0dp"
            android:hint="@string/edit1"
            android:textSize="20dp"
            android:textStyle="italic"
            android:typeface="normal"
            android:textAlignment="center"
            android:inputType="numberDecimal">
        </EditText>


        <TextView
            android:id="@+id/textPrestamo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/text2"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="italic"
            android:typeface="normal" />

        <EditText
            android:id="@+id/editCantidadYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/edit2"
            android:inputType="number"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:typeface="normal">

        </EditText>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp">

        <ImageButton
            android:id="@+id/ibcars"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="39dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="0dp"
            android:background="#e0f2f1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_car" />

        <ImageButton
            android:id="@+id/ibfamily"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_alignTop="@+id/ibhouse"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/ibhouse"
            android:layout_toRightOf="@+id/ibhouse"
            android:background="#e0f2f1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_family_group" />

        <ImageButton
            android:id="@+id/ibhouse"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_alignTop="@+id/ibcar"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:background="#e0f2f1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_house2" />


    </LinearLayout>





</RelativeLayout>
