<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    tools:context="com.exampleholamundo.esdraslopez.cuotas_banco.Information">

    <LinearLayout
        android:id="@+id/layout11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text4"
            android:layout_marginTop="20dp"
            android:textStyle="italic"
            android:textSize="22dp"
            android:textAlignment="center"
            android:typeface="normal"/>

    <LinearLayout
        android:id="@id/layout11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textMontob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:text="@string/text5"
            android:textSize="18dp"
            android:textStyle="italic"
            android:typeface="normal" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:text="                              "
            android:textSize="18dp"
            android:textStyle="italic"
            android:typeface="normal" />
    </LinearLayout>


        <LinearLayout
            android:id="@+id/layout12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textMontoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/text7"
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />


            <TextView
                android:id="@+id/texto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="                              "
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
        android:id="@+id/textMontod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/text9"
        android:textSize="18dp"
        android:textStyle="italic"
        android:typeface="normal" />


            <TextView
                android:id="@+id/texto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="                              "
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />
    </LinearLayout>


        <LinearLayout
            android:id="@+id/layout14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textMontoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/loan11"
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />


            <TextView
                android:id="@+id/texto4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="                              "
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textMontof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/loan13"
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />


            <TextView
                android:id="@+id/texto5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="                              "
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textMontog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/loan15"
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />


            <TextView
                android:id="@+id/texto6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="                              "
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textMontoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/loan17"
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />


            <TextView
                android:id="@+id/texto7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="                              "
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/loan19"
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />


            <TextView
                android:id="@+id/texto8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="                              "
                android:textSize="18dp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:text="@string/text21"
            android:onClick="openbank"
            android:background="#e0f2f1"/>
    </LinearLayout>


</RelativeLayout>
